# app-wrapper

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  bun_extractor使用说明_v2.md  bun_wrapper_fix.py  bun_wrapper_fix使用说明.md  resource.rc
docs/: README.md
src/: executor.cpp  executor.h  logger.cpp  logger.h  main.cpp  main_full_backup.cpp  main_orig.cpp  main_simple.cpp  pe_loader.cpp  pe_loader.h  pe_parser.cpp  pe_parser.h
test_bun/: minimal_loader.js  提取过程总结.md
tools/: bun_extractor.py  bun_pack.py  bun_wrapper_fix.py
